backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cloudshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: hashicorp/http-echo:1.0
        args:
          - "-text=Hello from Backend"
          - "-listen=:5000"
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
